@@ -951,7 +951,8 @@ main(
 
 
 	    close(native_pipe[1]);
-	    if (shm_control_name) {
+
+	    if (shm_control_name && dle->data_path == DATA_PATH_AMANDA) {
 		shm_ring = shm_ring_link(shm_control_name);
 		shm_ring_producer_set_size(shm_ring, NETWORK_BLOCK_BYTES*16, NETWORK_BLOCK_BYTES*4);
 		native_crc.in  = native_pipe[0];
@@ -971,7 +972,7 @@ main(
 		    client_crc.thread = g_thread_create(handle_crc_to_shm_ring_thread,
 					 (gpointer)&client_crc, TRUE, NULL);
 		}
-	    } else {
+	    } else if (dle->data_path == DATA_PATH_AMANDA) {
 		native_crc.in  = native_pipe[0];
 		native_crc.out = dumpout;
 		native_crc.thread = g_thread_create(handle_crc_thread,
@@ -984,9 +985,19 @@ main(
 		    client_crc.thread = g_thread_create(handle_crc_thread,
 					(gpointer)&client_crc, TRUE, NULL);
 		}
+	    } else { // dle->data_path == DATA_PATH_DIRECTTCP
+		native_crc.thread = NULL;
+		client_crc.thread = NULL;
 	    }
 
-	    g_thread_join(native_crc.thread);
+	    if (shm_ring && dle->data_path == DATA_PATH_DIRECTTCP) {
+		close_producer_shm_ring(shm_ring);
+		shm_ring = NULL;
+	    }
+
+	    if (native_crc.thread) {
+		g_thread_join(native_crc.thread);
+	    }
 	    if (have_filter) {
 		if (enc_stderr_pipe.thread) {
 		    g_thread_join(enc_stderr_pipe.thread);
@@ -997,9 +1008,9 @@ main(
 		g_thread_join(client_crc.thread);
 	    }
 
-	    if (shm_ring) {
-		close_producer_shm_ring(shm_ring);
-		shm_ring = NULL;
+	    if (shm_control_name && dle->data_path == DATA_PATH_DIRECTTCP) {
+		shm_ring = shm_ring_link(shm_control_name);
+		shm_ring_producer_set_size(shm_ring, NETWORK_BLOCK_BYTES*16, NETWORK_BLOCK_BYTES*4);
 	    }
 
 	    if (!have_filter)
@@ -1020,14 +1031,25 @@ main(
 			(long long)client_crc.crc.size);
 	    }
 
-	    g_debug("sendbackup: end");
-	    fprintf(mesgstream, "sendbackup: end\n");
-	    fflush(mesgstream);
-
 	    // should not check application_api_pid
 	    result |= check_result(mesgfd, bsu->want_server_backup_result &&
 		am_has_feature(g_options->features, fe_sendbackup_stream_cmd) &&
 		am_has_feature(g_options->features, fe_sendbackup_stream_cmd_get_dumper_result));
+
+
+	    if (shm_ring) {
+		close_producer_shm_ring(shm_ring);
+		shm_ring = NULL;
+	    }
+
+	    if (am_has_feature(g_options->features, fe_sendbackup_statedone)) {
+		fprintf(mesgstream, "sendbackup: statedone\n");
+		fflush(mesgstream);
+	    }
+
+	    g_debug("sendbackup: end");
+	    fprintf(mesgstream, "sendbackup: end\n");
+	    fflush(mesgstream);
 
 	    if (result == 0) {
 		char *amandates_file;
