@@ -1191,6 +1191,11 @@ process_dumpline(
 	    amfree(buf);
 	    return;
 	}
+	if (g_str_equal(tok, "statedone")) {
+	    aclose(statefile_in_mesg);
+	    amfree(buf);
+	    return;
+	}
 
 	if (g_str_equal(tok, "native-CRC")) {
 	    tok = strtok(NULL, "");
@@ -1706,9 +1711,14 @@ do_dump(
 		// stream to fd
 	    }
 	}
+    } else {
+	if (streams[DATAFD].fd) {
+	    security_stream_close(streams[DATAFD].fd);
+	    streams[DATAFD].fd = NULL;
+	}
     }
 
-    if (data_path == DATA_PATH_AMANDA && streams[CMDFD].fd != NULL) {
+    if (streams[CMDFD].fd != NULL) {
 	security_stream_read(streams[CMDFD].fd, read_cmdfd, NULL);
     }
     if (streams[STATEFD].fd != NULL) {
@@ -2186,7 +2196,7 @@ read_statefd(
 	if (shm_thread) {
 	    g_mutex_lock(shm_thread_mutex);
 	}
-	if (statefile_in_stream) {
+	if (statefile_in_stream != -1) {
 	    aclose(statefile_in_stream);
 	}
 
@@ -2210,7 +2220,7 @@ read_statefd(
 	if (shm_thread) {
 	    g_mutex_lock(shm_thread_mutex);
 	}
-	if (statefile_in_stream) {
+	if (statefile_in_stream != -1) {
 	    aclose(statefile_in_stream);
 	}
 	if (streams[STATEFD].fd) {
@@ -2341,6 +2351,12 @@ read_mesgfd(
 	if (data_path == DATA_PATH_AMANDA && set_datafd == 0) {
 	    security_stream_read(streams[DATAFD].fd, read_datafd, db);
 	    set_datafd = 1;
+	} else if (data_path == DATA_PATH_DIRECTTCP) {
+	    if (!header_sent(db)) {
+		g_cond_broadcast(shm_thread_cond);
+		g_mutex_unlock(shm_thread_mutex);
+		return;
+	    }
 	}
     }
 
@@ -2568,10 +2584,10 @@ read_datafd(
 	dumpsize += (off_t)DISK_BLOCK_KB;
 	headersize += (off_t)DISK_BLOCK_KB;
 
+	if (streams[CMDFD].fd != NULL) {
+	    security_stream_read(streams[CMDFD].fd, read_cmdfd, db);
+	}
 	if (data_path == DATA_PATH_AMANDA) {
-	    if (streams[CMDFD].fd != NULL) {
-		security_stream_read(streams[CMDFD].fd, read_cmdfd, db);
-	    }
 	    set_datafd = 1;
 	}
 	if (streams[STATEFD].fd != NULL) {
@@ -3799,7 +3815,8 @@ startup_dump(
 #ifdef FAILURE_CODE
 	disable_network_shm < 1 &&
 #endif
-	g_str_equal(auth,"local")) {
+	g_str_equal(auth,"local") &&
+	data_path == DATA_PATH_AMANDA) {
 	if (!shm_name) {
 	    shm_ring_consumer = shm_ring_create(NULL);
 	    shm_name = g_strdup(shm_ring_consumer->shm_control_name);
